# AIS_VD_pi

./: .gitignore  CMakeLists.txt  INSTALL.md  Plugin.cmake  README.md  VERSION.cmake  appveyor.yml  config.h.in  plugin.xml.in
.circleci/: config.yml
build-deps/: Hakansv.enc  Hakansv.pub  control
buildwin/: ais-vd.clone.bat  ais-vd.without.clone.bat
ci/: circleci-build-debian.sh  circleci-build-macos.sh  generic-build-raspbian-armhf.sh  git-push
cmake/: Metadata.cmake  PluginLibs.cmake  PluginLocalization.cmake  PluginOptions.cmake  Targets.cmake  TemplateVersion
flatpak/: org.opencpn.OpenCPN.Plugin.AIS_VD.yaml  org.opencpn.OpenCPN.Plugin.ais-vd.yaml
manual/: antora.yml
manual/modules/ROOT/pages/: index.adoc
po/: POTFILES.in  aa_ER.po  ais-vd_pi.pot  ar_SA.po  bg_BG.po  ca_ES.po  cs_CZ.po  da_DK.po  de_DE.po  el_GR.po  en_GB.po  es_ES.po  et_EE.po  fi_FI.po  fil_PH.po  fr_FR.po  gl_ES.po  he_IL.po  hi_IN.po  hu_HU.po  id_ID.po  is_IS.po  it_IT.po  ja_JP.po  ko_KR.po  mr_IN.po  nb_NO.po  nl_NL.po  pl_PL.po  pt_BR.po  pt_PT.po  ro_RO.po  ru_RU.po  sv_SE.po  th_TH.po  tr_TR.po  vi_VN.po  zh_CN.po  zh_TW.po
src/: AIS_VD_pi.cpp  AIS_VD_pi.h  CMakeLists.txt  SpesTextCtrl.cpp  SpesTextCtrl.h  ais-vd_pi.cpp  ais-vd_pi.h  default_pi.xpm  timepickerctrl.cpp  timepickerctrl.h
